<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NoteActivity"
    tools:showIn="@layout/activity_note">

    <Spinner
        android:id="@+id/spinner_editnote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_notetitle"
        android:layout_width="0dp"
        android:textCursorDrawable="@null"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinner_editnote"
        app:layout_constraintStart_toStartOf="@+id/spinner_editnote"
        app:layout_constraintTop_toBottomOf="@+id/spinner_editnote" />

    <EditText
        android:id="@+id/text_notebody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_notebody"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="@+id/text_notetitle"
        app:layout_constraintStart_toStartOf="@+id/text_notetitle"
        app:layout_constraintTop_toBottomOf="@+id/text_notetitle" />
</android.support.constraint.ConstraintLayout>